Fix last player being stuck in waiting screen
