# spectrumal-frontend/app/api/models/Spectrum.ts
@@ -1,0 +1,81 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OpenAPI
+ * OpenAPI
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { Dimension } from './Dimension';
+import {
+    DimensionFromJSON,
+    DimensionFromJSONTyped,
+    DimensionToJSON,
+    DimensionToJSONTyped,
+} from './Dimension';
+
+/**
+ * 
+ * @export
+ * @interface Spectrum
+ */
+export interface Spectrum {
+    /**
+     * 
+     * @type {Array<Dimension>}
+     * @memberof Spectrum
+     */
+    dimensions?: Array<Dimension>;
+    /**
+     * 
+     * @type {string}
+     * @memberof Spectrum
+     */
+    header?: string;
+}
+
+/**
+ * Check if a given object implements the Spectrum interface.
+ */
+export function instanceOfSpectrum(value: object): value is Spectrum {
+    return true;
+}
+
+export function SpectrumFromJSON(json: any): Spectrum {
+    return SpectrumFromJSONTyped(json, false);
+}
+
+export function SpectrumFromJSONTyped(json: any, ignoreDiscriminator: boolean): Spectrum {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'dimensions': json['dimensions'] == null ? undefined : ((json['dimensions'] as Array<any>).map(DimensionFromJSON)),
+        'header': json['header'] == null ? undefined : json['header'],
+    };
+}
+
+export function SpectrumToJSON(json: any): Spectrum {
+    return SpectrumToJSONTyped(json, false);
+}
+
+export function SpectrumToJSONTyped(value?: Spectrum | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'dimensions': value['dimensions'] == null ? undefined : ((value['dimensions'] as Array<any>).map(DimensionToJSON)),
+        'header': value['header'],
+    };
+}
+
